@@ -1,9 +1,8 @@
 /*
-	sys.h
-	non-portable functions
-
-	$Header: /cvsroot/uhexen2/hw_utils/hwmaster/sys.h,v 1.7 2010-01-11 18:48:19 sezero Exp $
-*/
+ * sys.h: non-portable functions
+ * relies on: arch_def.h
+ * $Id$
+ */
 
 #ifndef __HX2_SYS_H
 #define __HX2_SYS_H
@@ -16,10 +15,19 @@ char *Sys_ConsoleInput (void);
 
 /* disable use of password file on platforms where they
    aren't necessary or not possible. */
-#if defined(PLATFORM_WINDOWS) || defined(PLATFORM_DOS)
+#if defined(PLATFORM_DOS) || defined(PLATFORM_AMIGA) || \
+    defined(PLATFORM_WINDOWS)
 #undef	USE_PASSWORD_FILE
 #define	USE_PASSWORD_FILE	0
 #endif	/* _PASSWORD_FILE */
+
+/* disable user directories on platforms where they
+ * aren't necessary or not possible. */
+#if defined(PLATFORM_DOS) || defined(PLATFORM_AMIGA) || \
+    defined(PLATFORM_WINDOWS)
+#undef	DO_USERDIRS
+#define	DO_USERDIRS	0
+#endif	/* DO_USERDIRS  */
 
 #endif	/* __HX2_SYS_H */
 
